[package]
name = "nft-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = { version = "0.11.1", features = ["anchor"] }

[dev-dependencies]
litesvm = "0.6.0"
litesvm-token = "0.6.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-message = "2.2.0"
solana-transaction = "2.2.0"
solana-signer = "2.2.0"
solana-keypair = "2.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
